# apps/api/openapi.gen.json
@@ -243,7 +243,17 @@
           {
             "bearer_auth": []
           }
-        ]
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateConnectSessionRequest"
+              }
+            }
+          },
+          "required": true
+        }
       }
     },
     "/nango/connections": {
@@ -1800,6 +1810,18 @@
         "properties": {
           "status": {
             "type": "string"
+          }
+        }
+      },
+      "CreateConnectSessionRequest": {
+        "type": "object",
+        "properties": {
+          "allowed_integrations": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
           }
         }
       }
